* (bug 9948) Workaround for diff regression with old Mozilla versions Use JS to detect old Gecko versions known to have bogus implementation of overflow: auto for vertical sizing <div>s in table cells and change it to overflow: visible for an ugly but more-or-less-legible fallback behavior.

--- a/skins/common/diff.css
+++ b/skins/common/diff.css
@@ -62,4 +62,13 @@ table.diff td div {
 	/* As fallback, scrollbars will be added for very wide cells
 	   instead of text overflowing or widening */
 	overflow: auto;
+	
+	/* The above rule breaks on very old versions of Mozilla due
+	   to a bug which collapses the table cells to a single line.
+	   
+	   In Mozilla 1.1 and below with JavaScript enabled, the rule
+	   will be overridden with this by diff.js; wide cell contents
+	   then spill horizontally without widening the rest of the
+	   table: */
+	/* overflow: visible; */
 }
